@@ -22,7 +22,7 @@ OP_SendLoginInfo=0x4d5c				#
 OP_ApproveWorld=0x655c				# 
 OP_LogServer=0x1497					# 
 OP_SendCharInfo=0x7f9e				# 
-OP_ExpansionInfo=0x2c8f				# 
+OP_ExpansionInfo=0x7e4d				# 
 OP_GuildsList=0x5b0b				# 
 OP_EnterWorld=0x710e				# 
 OP_PostEnterWorld=0x7930			# 
@@ -83,8 +83,8 @@ OP_SpawnAppearance=0x3f55			#
 OP_ChangeSize=0x0000				#
 OP_TributeUpdate=0x0000				# 
 OP_TributeTimer=0x0000				# Testing VoA 0x1525
-OP_TaskDescription=0x2e4f			# 
-OP_TaskActivity=0x512b				# 
+OP_TaskDescription=0x0000			# Testing VoA 0x2e4f
+OP_TaskActivity=0x512b				# Testing VoA 0x512b
 OP_CompletedTasks=0x3141			# 
 OP_Weather=0x3e50					# 
 OP_SendAATable=0x6a7e				# Testing VoA 0x6a7e
@@ -106,7 +106,7 @@ OP_SendGuildTributes=0x0000			#
 OP_AAExpUpdate=0x1318				# 
 OP_ExpUpdate=0x221a					# Testing VoA 0x0555
 OP_HPUpdate=0x2369					# 
-OP_ManaChange=0x3887				# 
+OP_ManaChange=0x569a				# 
 OP_TGB=0x3672						# 
 OP_SpecialMesg=0x039d				# 
 OP_GuildMemberList=0x51bc			# 
@@ -152,7 +152,7 @@ OP_GMZoneRequest=0x701f				#
 OP_GMZoneRequest2=0x01				# 
 OP_GMGoto=0x15a1					# 
 OP_GMSearchCorpse=0x2bff			# 
-OP_GMHideMe=0x7e4d					# 
+OP_GMHideMe=0x28ef					# 0x7e4d
 OP_GMDelCorpse=0x072f				# 
 OP_GMApproval=0x481f				# 
 OP_GMToggle=0x2042					# 
@@ -167,11 +167,11 @@ OP_GMLastName=0x1055				#
 
 OP_InspectAnswer=0x0c54				# 
 OP_BeginCast=0x0d5a					# 
-OP_BuffFadeMsg=0x1b8a				# 
+OP_BuffFadeMsg=0x71bf				# 
 OP_ConsentResponse=0x35c6			# 
-OP_MemorizeSpell=0x569e				# 
+OP_MemorizeSpell=0x3887				# 
 OP_SwapSpell=0x28a7					# 
-OP_CastSpell=0x8543					# 
+OP_CastSpell=0x50c2					# 
 OP_Consider=0x70c6					# 
 OP_FormattedMessage=0x4675			# 
 OP_SimpleMessage=0x0698				# 
@@ -198,7 +198,7 @@ OP_DeleteSpell=0x0142				#
 OP_Surname=0x777c					# 
 OP_ClearSurname=0x0000				# 
 OP_FaceChange=0x0507				# 
-OP_SenseHeading=0x1dad				# 
+OP_SenseHeading=0x1b8a				# 
 OP_Action=0x1b85					# 
 OP_ConsiderCorpse=0x0e94			# 
 OP_HideCorpse=0x0000				# 
@@ -223,7 +223,7 @@ OP_Rewind=0x09e3					#
 OP_TargetCommand=0x3088				# 
 OP_InspectRequest=0x2683			# 
 OP_Hide=0x2913						# 
-OP_Jump=0x243b						# 
+OP_Jump=0x083b						# 
 OP_Camp=0x3cd6						# 
 OP_Emote=0x0000						# 
 OP_SetRunMode=0x59c3				# 
@@ -253,9 +253,9 @@ OP_ClickDoor=0x48f9					#
 OP_MoveDoor=0x231f					# 
 OP_RemoveAllDoors=0x24a3			# 
 OP_EnvDamage=0x2730					# 
-OP_BoardBoat=0x50c2					# 
+OP_BoardBoat=0x7554					# 0x50c2
 OP_Forage=0x3c02					# 
-OP_LeaveBoat=0x569a					# 
+OP_LeaveBoat=0x7286					# 0x569a
 OP_ControlBoat=0x2641				# 
 OP_SafeFallSuccess=0x1dc6			# 
 OP_RezzComplete=0x7108				# 
@@ -268,7 +268,7 @@ OP_AugmentItem=0x4cc6				#
 OP_WeaponEquip1=0x11bc				# 
 OP_WeaponEquip2=0x2121				# 
 OP_WeaponUnequip2=0x7b87			# 
-OP_ApplyPoison=0x3582				# 
+OP_ApplyPoison=0x5cd3				# 0x3582
 OP_Save=0x47e7						# 
 OP_TestBuff=0x712b					# 
 OP_CustomTitles=0x6ade				# 
@@ -321,7 +321,7 @@ OP_LDoNButton=0x597d				#
 OP_SetStartCity=0x179d				# 
 OP_VoiceMacroIn=0x0fce				# 
 OP_VoiceMacroOut=0x1c36				# 
-OP_ItemViewUnknown=0x0000			# 
+OP_ItemViewUnknown=0x24c9			# 
 OP_VetRewardsAvaliable=0x3637		# 
 OP_VetClaimRequest=0x032b			# 
 OP_VetClaimReply=0x7b6e				# 
@@ -407,8 +407,8 @@ OP_FinishWindow2=0x2c6d				#
 
 # Sent on Live for what seems to be item existance verification
 # Ex. Before Right Click Effect happens from items
-OP_ItemVerifyRequest=0x0000			# 
-OP_ItemVerifyReply=0x0000			# 
+OP_ItemVerifyRequest=0x503e			# 
+OP_ItemVerifyReply=0x4f35			# 
 
 # merchant crap
 OP_ShopPlayerSell=0x0b27			# 
@@ -470,9 +470,9 @@ OP_GroupUpdateB=0x0000				#
 OP_GroupCancelInvite=0x0000			# 
 OP_GroupAcknowledge=0x0000			# 
 OP_GroupDelete=0x0000				# 
-OP_CancelInvite=0x132f				# 
-OP_GroupFollow2=0x3519				# 
-OP_GroupInvite2=0x083b				# 
+OP_CancelInvite=0x2736				# 
+OP_GroupFollow2=0x6c16				# 
+OP_GroupInvite2=0x5251				# 
 OP_GroupDisbandYou=0x0000			# 
 OP_GroupDisbandOther=0x0000			# 
 OP_GroupLeaderChange=0x0000			# 
